# splink_synthetic_data

./: .gitignore  01_scrape_persons.py  02_scrape_forenames.py  02_scrape_names.py  03_raw_persons_data_to_one_line_per_person.py  04_create_name_lookups.py  04_scrape_postcodes_for_each_person.py  05_get_parquet_addresses.py  05_transform_raw_data.py  06_get_clean_one_row_per_person.py  07_corrupt_records.py  08_create_transactions.py  README.md  clean_raw_data.py  corrupt_records.ipynb  error_vector_sketch.py  master_records.ipynb  parallel_corrupt.sh  pyproject.toml  running_these_scripts.md  try.py
corrupt/: citizenship_corrupt.py  corrupt_birth_country.py  corrupt_country_citizenship.py  corrupt_date.py  corrupt_dob.py  corrupt_lat_lng.py  corrupt_name.py  corrupt_occupation.py  corrupt_string.py  corruption_functions.py  dob_corrupt.py  error_vector.py  geco_corrupt.py  gender_corrupt.py  location_corrupt.py  name_corrupt.py  pipeline.py  postcode_corrupt.py  record_corruptor.py
master_data/: names.py  utils.py
out_data/wikidata/raw/names/name_type=family/: stbtsa_page_0_0_to_4999.parquet  stbtsa_page_10_50000_to_54999.parquet  (+23 more)
path_fns/: filepaths.py
scrape_wikidata/: cleaning_fns.py  create_master_records.py  join_pc_address_person.py  names.py  postcodes.py  process_addresses.py  query_wikidata.py  scrape.py  scrape_names.py  scrape_persons.py  scrape_postcodes.py
transform_master_data/: alt_name_lookups.py  full_name_alternatives_per_person.py  names.py  parse_point.py  pipeline.py  tokens_in_full_name_not_in_given_family_name.py  utils.py
(+53 files in other folders)
